--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -265,22 +265,31 @@ jobs:
           echo "|---------|-----------|------------|--------|" >> $GITHUB_STEP_SUMMARY
 
           if [ -f frontend/.nyc_output/out.json ]; then
+            # Verificar si out.json tiene datos válidos
+            FILE_COUNT=$(jq 'length' frontend/.nyc_output/out.json)
+            if [ "$FILE_COUNT" -eq 0 ]; then
+              echo "⚠️ out.json está vacío o no contiene datos válidos" >> $GITHUB_STEP_SUMMARY
+              echo "| All files | N/A | 0 | ❌ |" >> $GITHUB_STEP_SUMMARY
+              echo "| Summary | N/A | 0 | ❌ |" >> $GITHUB_STEP_SUMMARY
+              exit 0
+            fi
+
             # Extraer métricas por archivo
-            jq -r 'to_entries[] | .key as $file | .value.s | to_entries | {file: $file, total: (length), covered: ([.[] | select(.value > 0)] | length)} | select(.total > 0) | [.file | sub(".*src/"; "")] + [((.covered * 100) / .total | floor | tostring + "%"), "0", (if ((.covered * 100) / .total) >= 80 then "✔" elif ((.covered * 100) / .total) >= 50 then "➖" else "❌" end)] | join("|")' frontend/.nyc_output/out.json | while IFS='|' read -r FILE LINE_RATE COMPLEXITY HEALTH; do
+            jq -r 'to_entries[] | .key as $file | .value | select(.s?) | .s | to_entries | {file: $file, total: (length), covered: ([.[] | select(.value > 0)] | length)} | select(.total > 0) | [.file | sub(".*src/"; "") // sub(".*frontend/"; "") // .] + [((.covered * 100) / .total | floor | tostring + "%"), "0", (if ((.covered * 100) / .total) >= 80 then "✔" elif ((.covered * 100) / .total) >= 50 then "➖" else "❌" end)] | join("|")' frontend/.nyc_output/out.json | while IFS='|' read -r FILE LINE_RATE COMPLEXITY HEALTH; do
               echo "Processing file: $FILE, Line Rate: $LINE_RATE, Health: $HEALTH" >&2
               echo "| $FILE | $LINE_RATE | $COMPLEXITY | $HEALTH |" >> $GITHUB_STEP_SUMMARY
             done
 
             # Extraer métricas totales
-            TOTAL_STATEMENTS=$(jq '[.[] | .s | to_entries | length] | add' frontend/.nyc_output/out.json)
-            COVERED_STATEMENTS=$(jq '[.[] | .s | to_entries | select(.value > 0) | length] | add' frontend/.nyc_output/out.json)
+            TOTAL_STATEMENTS=$(jq '[.[] | select(.s?) | .s | to_entries | length] | add // 0' frontend/.nyc_output/out.json)
+            COVERED_STATEMENTS=$(jq '[.[] | select(.s?) | .s | to_entries | select(.value > 0) | length] | add // 0' frontend/.nyc_output/out.json)
             echo "Total statements: $TOTAL_STATEMENTS, Covered statements: $COVERED_STATEMENTS" >&2
             if [ -z "$TOTAL_STATEMENTS" ] || [ "$TOTAL_STATEMENTS" -eq 0 ]; then
               LINE_RATE="0%"
               HEALTH="❌"
               SUMMARY="0% (0 / 0)"
             else
-              LINE_RATE=$(echo "scale=2; ($COVERED_STATEMENTS * 100) / $TOTAL_STATEMENTS" | bc)
+              LINE_RATE=$(echo "scale=2; ($COVERED_STATEMENTS * 100) / $TOTAL_STATEMENTS" | bc 2>/dev/null || echo "0")
               LINE_RATE_INT=$(echo "$LINE_RATE" | cut -d. -f1)
               LINE_RATE=$(printf "%.0f%%" "$LINE_RATE_INT")
               SUMMARY="$LINE_RATE ($COVERED_STATEMENTS / $TOTAL_STATEMENTS)"
