--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -243,42 +243,10 @@ jobs:
           echo "VITE_API_URL_QA=${{ secrets.BACKEND_QA_URL }}" > .env
           echo "VITE_API_URL_PROD=${{ secrets.BACKEND_PROD_URL }}" >> .env
           echo "VITE_FRONTEND_URL=${{ secrets.FRONTEND_QA_URL }}" >> .env
-      - name: Configure NYC for Coverage
-        run: |
-          cd frontend
-          echo '{
-            "extends": "@istanbuljs/nyc-config-typescript",
-            "all": true,
-            "include": ["src/**/*.{js,jsx,ts,tsx}"],
-            "exclude": ["tests/", "cypress/", "node_modules/"],
-            "reporter": ["json", "json-summary", "lcov"],
-            "report-dir": ".nyc_output"
-          }' > .nycrc.json
-          cat .nycrc.json
       - name: Run Cypress Tests with Coverage
         run: |
           cd frontend
-          npx cypress run --reporter mocha-junit-reporter --reporter-options "mochaFile=cypress/results.xml" --env coverage=true
-      - name: Check Cypress Coverage File
-        run: |
-          echo "Checking Cypress coverage files..."
-          ls -l frontend/.nyc_output/ || echo "Error: .nyc_output directory not found"
-          if [ -f frontend/.nyc_output/out.json ]; then
-            echo "out.json found. First 100 lines:"
-            head -n 100 frontend/.nyc_output/out.json
-            echo "out.json keys:"
-            jq 'keys' frontend/.nyc_output/out.json
-            echo "out.json file count:"
-            jq 'length' frontend/.nyc_output/out.json
-          else
-            echo "Error: out.json not found"
-          fi
-          if [ -f frontend/.nyc_output/coverage-summary.json ]; then
-            echo "coverage-summary.json found. Contents:"
-            cat frontend/.nyc_output/coverage-summary.json
-          else
-            echo "coverage-summary.json not found"
-          fi
+          npx cypress run --reporter mocha-junit-reporter --reporter-options "mochaFile=cypress/results.xml"
       - name: Publish Test Results
         uses: dorny/test-reporter@v1
         if: always()
@@ -286,66 +254,6 @@ jobs:
           name: Cypress Results
           path: frontend/cypress/results.xml
           reporter: java-junit
-      - name: Install xmlstarlet and jq
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y xmlstarlet jq
-      - name: Write Integration Test Coverage to Summary
-        run: |
-          echo "## Integration Test Coverage" >> $GITHUB_STEP_SUMMARY
-          echo "| Package | Line Rate | Complexity | Health |" >> $GITHUB_STEP_SUMMARY
-          echo "|---------|-----------|------------|--------|" >> $GITHUB_STEP_SUMMARY
-
-          if [ -f frontend/.nyc_output/out.json ]; then
-            # Verificar si out.json tiene datos válidos
-            FILE_COUNT=$(jq 'length' frontend/.nyc_output/out.json)
-            if [ "$FILE_COUNT" -eq 0 ]; then
-              echo "⚠️ out.json está vacío o no contiene datos válidos" >> $GITHUB_STEP_SUMMARY
-              echo "| All files | N/A | 0 | ❌ |" >> $GITHUB_STEP_SUMMARY
-              echo "| Summary | N/A | 0 | ❌ |" >> $GITHUB_STEP_SUMMARY
-              exit 0
-            fi
-
-            # Extraer métricas por archivo
-            jq -r 'to_entries[] | .key as $file | .value | select(.s?) | .s | to_entries | {file: $file, total: (length), covered: ([.[] | select(.value > 0)] | length)} | select(.total > 0) | [.file | sub(".*src/"; "") // sub(".*frontend/"; "") // .] + [((.covered * 100) / .total | floor | tostring + "%"), "0", (if ((.covered * 100) / .total) >= 80 then "✔" elif ((.covered * 100) / .total) >= 50 then "➖" else "❌" end)] | join("|")' frontend/.nyc_output/out.json | while IFS='|' read -r FILE LINE_RATE COMPLEXITY HEALTH; do
-              echo "Processing file: $FILE, Line Rate: $LINE_RATE, Health: $HEALTH" >&2
-              echo "| $FILE | $LINE_RATE | $COMPLEXITY | $HEALTH |" >> $GITHUB_STEP_SUMMARY
-            done
-
-            # Extraer métricas totales
-            TOTAL_STATEMENTS=$(jq '[.[] | select(.s?) | .s | to_entries | length] | add // 0' frontend/.nyc_output/out.json)
-            COVERED_STATEMENTS=$(jq '[.[] | select(.s?) | .s | to_entries | select(.value > 0) | length] | add // 0' frontend/.nyc_output/out.json)
-            echo "Total statements: $TOTAL_STATEMENTS, Covered statements: $COVERED_STATEMENTS" >&2
-            if [ -z "$TOTAL_STATEMENTS" ] || [ "$TOTAL_STATEMENTS" -eq 0 ]; then
-              LINE_RATE="0%"
-              HEALTH="❌"
-              SUMMARY="0% (0 / 0)"
-            else
-              LINE_RATE=$(echo "scale=2; ($COVERED_STATEMENTS * 100) / $TOTAL_STATEMENTS" | bc 2>/dev/null || echo "0")
-              LINE_RATE_INT=$(echo "$LINE_RATE" | cut -d. -f1)
-              LINE_RATE=$(printf "%.0f%%" "$LINE_RATE_INT")
-              SUMMARY="$LINE_RATE ($COVERED_STATEMENTS / $TOTAL_STATEMENTS)"
-              if [ "$LINE_RATE_INT" -ge 80 ]; then
-                HEALTH="✔"
-              elif [ "$LINE_RATE_INT" -ge 50 ]; then
-                HEALTH="➖"
-              else
-                HEALTH="❌"
-              fi
-            fi
-            echo "| All files | $LINE_RATE | 0 | $HEALTH |" >> $GITHUB_STEP_SUMMARY
-            echo "| Summary | $SUMMARY | 0 | $HEALTH |" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "⚠️ No se encontró out.json para Cypress" >> $GITHUB_STEP_SUMMARY
-            echo "| All files | N/A | 0 | ❌ |" >> $GITHUB_STEP_SUMMARY
-            echo "| Summary | N/A | 0 | ❌ |" >> $GITHUB_STEP_SUMMARY
-          fi
-      - name: Upload Cypress Coverage Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: cypress-coverage-report
-          path: frontend/coverage/
-          if-no-files-found: warn
 
   #=======================
   # STAGE: DEPLOY TO PROD
