--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.4",
         "react-dom": "^18.3.1",
+        "react-icons": "^5.5.0",
         "react-router-dom": "^7.5.0"
     },
     "devDependencies": {
@@ -35,7 +36,7 @@
         "jest-environment-jsdom": "^29.7.0",
         "jest-junit": "^16.0.0",
         "mocha-junit-reporter": "^2.2.1",
-        "vite": "^6.3.3",
+        "vite": "^6.3.5",
         "vite-plugin-istanbul": "^7.0.0"
     }
 }
