--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,7 +3,7 @@ name: Pipeline
 on:
   push:
     branches:
-      - none
+      - SinLogin
 
 permissions:
   checks: write # Permite escribir check runs para mostrar resultados de tests
