Prueba despliegue MVP

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -77,10 +77,6 @@ jobs:
         with:
           name: backend-artifact
           path: .
-      - name: Install jq
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y jq
       - name: Create Backend Environment File
         run: |
           echo "DATABASE_URL=${{ secrets.DATABASE_QA_URL }}" > env.config
@@ -93,8 +89,8 @@ jobs:
           echo "GOOGLE_CLOUD_BUCKET_NAME=${{ secrets.GOOGLE_CLOUD_BUCKET_NAME_QA }}" >> env.config
           echo "GOOGLE_SHEET_ID=${{ secrets.GOOGLE_SHEET_ID }}" >> env.config
           mkdir -p src/credentials
-          echo "${{ secrets.FIREBASE_CREDENTIALS_JSON_QA }}" | jq . > src/credentials/firebase_credentials.json
-          echo "${{ secrets.GOOGLE_CREDENTIALS_JSON_QA }}" | jq . > src/credentials/google_credentials.json
+          echo "${{ secrets.FIREBASE_CREDENTIALS_JSON_QA }}" > src/credentials/firebase_credentials.json
+          echo "${{ secrets.GOOGLE_CREDENTIALS_JSON_QA }}" > src/credentials/google_credentials.json
       - name: Login to Azure
         uses: azure/login@v1
         with:
@@ -153,10 +149,6 @@ jobs:
         with:
           name: backend-artifact
           path: .
-      - name: Install jq
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y jq
       - name: Create Backend Environment File
         run: |
           echo "DATABASE_URL=${{ secrets.DATABASE_PROD_URL }}" > env.config
@@ -169,8 +161,8 @@ jobs:
           echo "GOOGLE_CLOUD_BUCKET_NAME=${{ secrets.GOOGLE_CLOUD_BUCKET_NAME_PROD }}" >> env.config
           echo "GOOGLE_SHEET_ID=${{ secrets.GOOGLE_SHEET_ID }}" >> env.config
           mkdir -p src/credentials
-          echo "${{ secrets.FIREBASE_CREDENTIALS_JSON_PROD }}" | jq . > src/credentials/firebase_credentials.json
-          echo "${{ secrets.GOOGLE_CREDENTIALS_JSON_PROD }}" | jq . > src/credentials/google_credentials.json
+          echo "${{ secrets.FIREBASE_CREDENTIALS_JSON_PROD }}" > src/credentials/firebase_credentials.json
+          echo "${{ secrets.GOOGLE_CREDENTIALS_JSON_PROD }}" > src/credentials/google_credentials.json
       - name: Login to Azure
         uses: azure/login@v1
         with:
