--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -77,20 +77,24 @@ jobs:
         with:
           name: backend-artifact
           path: .
+      - name: Install jq
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
       - name: Create Backend Environment File
         run: |
           echo "DATABASE_URL=${{ secrets.DATABASE_QA_URL }}" > env.config
           echo "FRONTEND_URL=${{ secrets.FRONTEND_QA_URL }}" >> env.config
-          echo "FIREBASE_CREDENTIALS=./credentials/firebase_credentials.json" >> env.config
+          echo "FIREBASE_CREDENTIALS=src/credentials/firebase_credentials.json" >> env.config
           echo "EMAIL_ADMIN=${{ secrets.EMAIL_ADMIN_QA }}" >> env.config
           echo "NOMBRE_ADMIN=${{ secrets.NOMBRE_ADMIN_QA }}" >> env.config
           echo "PASSWORD_ADMIN=${{ secrets.PASSWORD_ADMIN_QA }}" >> env.config
-          echo "GOOGLE_CREDENTIALS=./credentials/google_cloud_credentials.json" >> env.config
+          echo "GOOGLE_CREDENTIALS=src/credentials/google_credentials.json" >> env.config
           echo "GOOGLE_CLOUD_BUCKET_NAME=${{ secrets.GOOGLE_CLOUD_BUCKET_NAME_QA }}" >> env.config
           echo "GOOGLE_SHEET_ID=${{ secrets.GOOGLE_SHEET_ID }}" >> env.config
           mkdir -p src/credentials
-          echo "${{ secrets.FIREBASE_CREDENTIALS_JSON_QA }}" > src/credentials/firebase_credentials.json
-          echo "${{ secrets.GOOGLE_CREDENTIALS_JSON_QA }}" > src/credentials/google_credentials.json
+          echo "${{ secrets.FIREBASE_CREDENTIALS_JSON_QA }}" | jq . > src/credentials/firebase_credentials.json || { echo "Invalid FIREBASE_CREDENTIALS_JSON"; exit 1; }
+          echo "${{ secrets.GOOGLE_CREDENTIALS_JSON_QA }}" | jq . > src/credentials/google_credentials.json || { echo "Invalid GOOGLE_CREDENTIALS_JSON"; exit 1; }
       - name: Login to Azure
         uses: azure/login@v1
         with:
@@ -153,11 +157,11 @@ jobs:
         run: |
           echo "DATABASE_URL=${{ secrets.DATABASE_PROD_URL }}" > env.config
           echo "FRONTEND_URL=${{ secrets.FRONTEND_PROD_URL }}" >> env.config
-          echo "FIREBASE_CREDENTIALS=./credentials/firebase_credentials.json" >> env.config
+          echo "FIREBASE_CREDENTIALS=src/credentials/firebase_credentials.json" >> env.config
           echo "EMAIL_ADMIN=${{ secrets.EMAIL_ADMIN_PROD }}" >> env.config
           echo "NOMBRE_ADMIN=${{ secrets.NOMBRE_ADMIN_PROD }}" >> env.config
           echo "PASSWORD_ADMIN=${{ secrets.PASSWORD_ADMIN_PROD }}" >> env.config
-          echo "GOOGLE_CREDENTIALS=./credentials/google_cloud_credentials.json" >> env.config
+          echo "GOOGLE_CREDENTIALS=src/credentials/google_credentials.json" >> env.config
           echo "GOOGLE_CLOUD_BUCKET_NAME=${{ secrets.GOOGLE_CLOUD_BUCKET_NAME_PROD }}" >> env.config
           echo "GOOGLE_SHEET_ID=${{ secrets.GOOGLE_SHEET_ID }}" >> env.config
           mkdir -p src/credentials
