--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -83,20 +83,19 @@ jobs:
           sudo apt-get install -y jq
       - name: Create Backend Environment File
         run: |
-          cd backend/src
           echo "DATABASE_URL=${{ secrets.DATABASE_QA_URL }}" > env.config
           echo "FRONTEND_URL=${{ secrets.FRONTEND_QA_URL }}" >> env.config
-          echo "FIREBASE_CREDENTIALS=src/credentials/firebase_credentials.json" >> env.config
+          echo "FIREBASE_CREDENTIALS=credentials/firebase_credentials.json" >> env.config
           echo "EMAIL_ADMIN=${{ secrets.EMAIL_ADMIN_QA }}" >> env.config
           echo "NOMBRE_ADMIN=${{ secrets.NOMBRE_ADMIN_QA }}" >> env.config
           echo "PASSWORD_ADMIN=${{ secrets.PASSWORD_ADMIN_QA }}" >> env.config
-          echo "GOOGLE_CREDENTIALS=src/credentials/google_credentials.json" >> env.config
+          echo "GOOGLE_CREDENTIALS=credentials/google_credentials.json" >> env.config
           echo "GOOGLE_CLOUD_BUCKET_NAME=${{ secrets.GOOGLE_CLOUD_BUCKET_NAME_QA }}" >> env.config
           echo "GOOGLE_SHEET_ID=${{ secrets.GOOGLE_SHEET_ID }}" >> env.config
-          mkdir -p src/credentials
-          printf '%s' "${{ secrets.FIREBASE_CREDENTIALS_JSON_QA }}" > src/credentials/firebase_credentials.json
+          mkdir -p credentials
+          printf '%s' "${{ secrets.FIREBASE_CREDENTIALS_JSON_QA }}" > credentials/firebase_credentials.json
           jq . credentials/firebase_credentials.json || { echo "Invalid FIREBASE_CREDENTIALS_JSON"; exit 1; }
-          printf '%s' "${{ secrets.GOOGLE_CREDENTIALS_JSON_QA }}" > src/credentials/google_credentials.json
+          printf '%s' "${{ secrets.GOOGLE_CREDENTIALS_JSON_QA }}" > credentials/google_credentials.json
           jq . credentials/google_credentials.json || { echo "Invalid GOOGLE_CREDENTIALS_JSON"; exit 1; }
       - name: Login to Azure
         uses: azure/login@v1
@@ -158,20 +157,19 @@ jobs:
           path: .
       - name: Create Backend Environment File
         run: |
-          cd backend/src
           echo "DATABASE_URL=${{ secrets.DATABASE_PROD_URL }}" > env.config
           echo "FRONTEND_URL=${{ secrets.FRONTEND_PROD_URL }}" >> env.config
-          echo "FIREBASE_CREDENTIALS=src/credentials/firebase_credentials.json" >> env.config
+          echo "FIREBASE_CREDENTIALS=credentials/firebase_credentials.json" >> env.config
           echo "EMAIL_ADMIN=${{ secrets.EMAIL_ADMIN_PROD }}" >> env.config
           echo "NOMBRE_ADMIN=${{ secrets.NOMBRE_ADMIN_PROD }}" >> env.config
           echo "PASSWORD_ADMIN=${{ secrets.PASSWORD_ADMIN_PROD }}" >> env.config
-          echo "GOOGLE_CREDENTIALS=src/credentials/google_credentials.json" >> env.config
+          echo "GOOGLE_CREDENTIALS=credentials/google_credentials.json" >> env.config
           echo "GOOGLE_CLOUD_BUCKET_NAME=${{ secrets.GOOGLE_CLOUD_BUCKET_NAME_PROD }}" >> env.config
           echo "GOOGLE_SHEET_ID=${{ secrets.GOOGLE_SHEET_ID }}" >> env.config
-          mkdir -p src/credentials
-          printf '%s' "${{ secrets.FIREBASE_CREDENTIALS_JSON_PROD }}" > src/credentials/firebase_credentials.json
+          mkdir -p credentials
+          printf '%s' "${{ secrets.FIREBASE_CREDENTIALS_JSON_PROD }}" > credentials/firebase_credentials.json
           jq . credentials/firebase_credentials.json || { echo "Invalid FIREBASE_CREDENTIALS_JSON"; exit 1; }
-          printf '%s' "${{ secrets.GOOGLE_CREDENTIALS_JSON_PROD }}" > src/credentials/google_credentials.json
+          printf '%s' "${{ secrets.GOOGLE_CREDENTIALS_JSON_PROD }}" > credentials/google_credentials.json
           jq . credentials/google_credentials.json || { echo "Invalid GOOGLE_CREDENTIALS_JSON"; exit 1; }
       - name: Login to Azure
         uses: azure/login@v1
