--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,7 +7,7 @@ google-api-python-client==2.149.0
 pytest==8.3.3
 python-dotenv==1.0.1
 passlib[bcrypt]==1.7.4
-pydantic[email]==2.9.2
+pydantic==2.11.7
 gunicorn==23.0.0
 httpx==0.27.2
 pytest-mock==3.14.0
