--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
         "react-bootstrap": "^2.10.4",
         "react-dom": "^18.3.1",
         "react-icons": "^5.5.0",
-        "react-router-dom": "^7.5.0"
+        "react-router-dom": "^7.5.0",
+        "react-select": "^5.10.1",
+        "use-places-autocomplete": "^4.0.1"
     },
     "devDependencies": {
         "@babel/core": "^7.26.10",
