--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,15 @@
     },
     "dependencies": {
         "@react-google-maps/api": "^2.20.7",
-        "axios": "^1.7.7",
+        "axios": "^1.10.0",
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.13.1",
         "firebase": "^11.6.1",
+        "leaflet": "^1.9.4",
+        "leaflet-geometryutil": "^0.10.3",
+        "leaflet-rotate": "^0.2.8",
+        "leaflet-rotatedmarker": "^0.2.0",
+        "leaflet-routing-machine": "^3.2.12",
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.4",
         "react-dom": "^18.3.1",
