--- a/frontend/.env
+++ b/frontend/.env
@@ -6,3 +6,4 @@ VITE_GOOGLE_CLIENT_ID_QA=212242094333-pmtuhrj2j1ge99lg9i04k7nvg98f9doh.apps.goog
 VITE_FIREBASE_CONFIG_PROD={"apiKey":"AIzaSyDIgEtvRLOZpgv5xtovQ0vwYRLgCIiai9U","authDomain":"inversurprod.firebaseapp.com","projectId":"inversurprod","storageBucket":"inversurprod.firebasestorage.app","messagingSenderId":"451164698955","appId":"1:451164698955:web:4d85bb6bb19f6e8f8790ce"}
 VITE_GOOGLE_CLIENT_ID_PROD=451164698955-rfkde7o9e0mvan9gpt65v5e2tl656hdk.apps.googleusercontent.com
 VITE_GOOGLE_MAPS_API_KEY=AIzaSyCvoz7py5BP1rDgvi0_4eNNgUJerDNQmIA
+VITE_OSRM_URL=http://localhost:5000/route/v1
