--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@react-google-maps/api": "^2.20.7",
+        "@turf/turf": "^7.2.0",
         "axios": "^1.10.0",
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.13.1",
