--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -67,9 +67,11 @@ jobs:
         run: |
           cd frontend
           npm run build
-      - name: Copy staticwebapp.config.json to dist
+      - name: Copy staticwebapp.config.json and firebase-configs to dist
         run: |
           cp frontend/staticwebapp.config.json frontend/dist/
+          cp frontend/firebase-config-qa.js frontend/dist/
+          cp frontend/firebase-config-prod.js frontend/dist/
       - name: Upload Frontend Artifact
         uses: actions/upload-artifact@v4
         with:
