--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -72,6 +72,7 @@ jobs:
       - name: Copy staticwebapp.config.json and firebase-configs to dist
         run: |
           cp frontend/staticwebapp.config.json frontend/dist/
+          cp frontend/firebase-messaging-sw.js frontend/dist/
           cp frontend/firebase-config-qa.js frontend/dist/
           cp frontend/firebase-config-prod.js frontend/dist/
       - name: Upload Frontend Artifact
