--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -107,6 +107,7 @@ jobs:
           echo "GOOGLE_CREDENTIALS=${{ secrets.GOOGLE_CREDENTIALS_JSON_QA }}" >> env.config
           echo "GOOGLE_CLOUD_BUCKET_NAME=${{ secrets.GOOGLE_CLOUD_BUCKET_NAME_QA }}" >> env.config
           echo "GOOGLE_SHEET_ID=${{ secrets.GOOGLE_SHEET_ID }}" >> env.config
+          echo "FORCE_HTTPS=true" >> env.config
       - name: Login to Azure
         uses: azure/login@v1
         with:
@@ -167,6 +168,7 @@ jobs:
           echo "GOOGLE_CREDENTIALS=${{ secrets.GOOGLE_CREDENTIALS_JSON_PROD }}" >> env.config
           echo "GOOGLE_CLOUD_BUCKET_NAME=${{ secrets.GOOGLE_CLOUD_BUCKET_NAME_PROD }}" >> env.config
           echo "GOOGLE_SHEET_ID=${{ secrets.GOOGLE_SHEET_ID }}" >> env.config
+          echo "FORCE_HTTPS=true" >> env.config
       - name: Login to Azure
         uses: azure/login@v1
         with:
