--- a/frontend/.env
+++ b/frontend/.env
@@ -3,7 +3,7 @@ VITE_API_URL_PROD=http://localhost:8000
 VITE_FRONTEND_URL=http://localhost:5173
 VITE_FIREBASE_CONFIG_QA={"apiKey":"AIzaSyCfCip81COg2TK4FxGdNXGrG1njTLf6m_E","authDomain":"proyecto-inversur.firebaseapp.com","databaseURL": "https://proyecto-inversur-default-rtdb.firebaseio.com","projectId":"proyecto-inversur","storageBucket":"proyecto-inversur.firebasestorage.app","messagingSenderId":"212242094333","appId":"1:212242094333:web:162c27396c148c61b4c694"}
 VITE_GOOGLE_CLIENT_ID_QA=212242094333-pmtuhrj2j1ge99lg9i04k7nvg98f9doh.apps.googleusercontent.com
-VITE_FIREBASE_CONFIG_PROD={"apiKey":"AIzaSyDIgEtvRLOZpgv5xtovQ0vwYRLgCIiai9U","authDomain":"inversurprod.firebaseapp.com","projectId":"inversurprod","storageBucket":"inversurprod.firebasestorage.app","messagingSenderId":"451164698955","appId":"1:451164698955:web:4d85bb6bb19f6e8f8790ce"}
+VITE_FIREBASE_CONFIG_PROD={"apiKey":"AIzaSyDIgEtvRLOZpgv5xtovQ0vwYRLgCIiai9U","authDomain":"inversurprod.firebaseapp.com","databaseURL": "https://inversurprod-default-rtdb.firebaseio.com","projectId":"inversurprod","storageBucket":"inversurprod.firebasestorage.app","messagingSenderId":"451164698955","appId":"1:451164698955:web:4d85bb6bb19f6e8f8790ce"}
 VITE_GOOGLE_CLIENT_ID_PROD=451164698955-rfkde7o9e0mvan9gpt65v5e2tl656hdk.apps.googleusercontent.com
 VITE_GOOGLE_MAPS_API_KEY_QA=AIzaSyCvoz7py5BP1rDgvi0_4eNNgUJerDNQmIA
 VITE_GOOGLE_MAPS_API_KEY_PROD=AIzaSyC1xUr-6pwhrNbz2NpTy-8NWAovbUdp7eo
