--- a/backend/src/env.config.example
+++ b/backend/src/env.config.example
@@ -9,3 +9,5 @@ GOOGLE_CREDENTIALS=./credentials/google_cloud_credentials.json
 GOOGLE_CLOUD_BUCKET_NAME=your_googleclud_bucketname
 GOOGLE_SHEETS_CREDENTIALS="your_google_sheets_credentials"
 GOOGLE_SHEET_ID=your_google_sheet_id
+VAPID_PUBLIC_KEY=your_vapid_public_key
+VAPID_PRIVATE_KEY=your_vapid_private_key
