--- a/frontend/public/staticwebapp.config.json
+++ b/frontend/public/staticwebapp.config.json
@@ -1,6 +1,6 @@
 {
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": ["/assets/*", "/images/*", "/css/*", "/js/*", "/favicon.ico", "/icons/*", "/firebase-messaging-sw.js"]
+    "exclude": ["/assets/*", "/images/*", "/css/*", "/js/*", "/favicon.ico", "/icons/*", "/push-sw.js"]
   }
 }
