--- a/frontend/.env
+++ b/frontend/.env
@@ -7,6 +7,6 @@ VITE_FIREBASE_CONFIG_PROD={"apiKey":"AIzaSyDIgEtvRLOZpgv5xtovQ0vwYRLgCIiai9U","a
 VITE_GOOGLE_CLIENT_ID_PROD=451164698955-rfkde7o9e0mvan9gpt65v5e2tl656hdk.apps.googleusercontent.com
 VITE_GOOGLE_MAPS_API_KEY_QA=AIzaSyCvoz7py5BP1rDgvi0_4eNNgUJerDNQmIA
 VITE_GOOGLE_MAPS_API_KEY_PROD=AIzaSyC1xUr-6pwhrNbz2NpTy-8NWAovbUdp7eo
-VITE_OSRM_URL=https://osrm-hidden-violet-7891.fly.dev/route/v1
+VITE_OSRM_URL=https://osrm-s4x2.onrender.com/route/v1
 VITE_WEB_PUSH_PUBLIC_KEY_QA=BN1uD7Lk_hFtmHwYLnTULTy_93Vc-P6OkDvQ2-7WkwU1p-rUs0ZaimEb4ORiuJKZzk-EBHbmwKxqICIgR6vafMs
 VITE_WEB_PUSH_PUBLIC_KEY_PROD=rl7XqzGh42iZHAFsJtQTkBQMQ6fbS3bn2slm-uKQGdw
