--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
         "axios": "^1.10.0",
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.13.1",
-        "firebase": "^12.0.0",
         "chart.js": "^4.5.0",
+        "firebase": "^12.0.0",
+        "html2canvas": "^1.4.1",
+        "jspdf": "^3.0.1",
         "leaflet": "^1.9.4",
         "leaflet-geometryutil": "^0.10.3",
         "leaflet-rotate": "^0.2.8",
