--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
         "dev": "vite",
         "build": "vite build",
         "preview": "vite preview",
-        "test": "jest",
+        "test": "vitest",
         "cypress": "cypress open"
     },
     "dependencies": {
@@ -35,23 +35,16 @@
         "use-places-autocomplete": "^4.0.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.26.10",
-        "@babel/preset-env": "^7.26.9",
-        "@babel/preset-react": "^7.26.3",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^14.3.1",
         "@testing-library/user-event": "^14.6.1",
         "@vitejs/plugin-react": "^4.3.1",
-        "babel-jest": "^29.7.0",
-        "babel-plugin-istanbul": "^7.0.0",
         "cypress": "^13.15.0",
         "dotenv": "^16.5.0",
         "identity-obj-proxy": "^3.0.0",
-        "jest": "^29.7.0",
-        "jest-environment-jsdom": "^29.7.0",
-        "jest-junit": "^16.0.0",
-        "mocha-junit-reporter": "^2.2.1",
         "vite": "^6.3.5",
-        "vite-plugin-istanbul": "^7.0.0"
+        "vite-plugin-istanbul": "^7.0.0",
+        "vitest": "^1.5.0",
+        "jsdom": "^24.0.0"
     }
 }
