--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,8 @@
         "axios": "^1.10.0",
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.13.1",
-        "firebase": "^12.0.0",
         "chart.js": "^4.5.0",
+        "firebase": "^12.0.0",
         "html2canvas": "^1.4.1",
         "jspdf": "^3.0.1",
         "leaflet": "^1.9.4",
@@ -35,16 +35,16 @@
         "use-places-autocomplete": "^4.0.1"
     },
     "devDependencies": {
-        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/jest-dom": "^6.7.0",
         "@testing-library/react": "^14.3.1",
         "@testing-library/user-event": "^14.6.1",
         "@vitejs/plugin-react": "^4.3.1",
         "cypress": "^13.15.0",
         "dotenv": "^16.5.0",
         "identity-obj-proxy": "^3.0.0",
+        "jsdom": "^24.1.3",
         "vite": "^6.3.5",
         "vite-plugin-istanbul": "^7.0.0",
-        "vitest": "^1.5.0",
-        "jsdom": "^24.0.0"
+        "vitest": "^1.6.1"
     }
 }
