--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
         "build": "vite build",
         "preview": "vite preview",
         "test": "vitest",
-        "cypress": "cypress open"
+        "cypress": "cypress open",
+        "cy:run": "cypress run",
+        "test:e2e": "start-server-and-test dev http://localhost:5173 cy:run"
     },
     "dependencies": {
         "@react-google-maps/api": "^2.20.7",
@@ -43,8 +45,9 @@
         "dotenv": "^16.5.0",
         "identity-obj-proxy": "^3.0.0",
         "jsdom": "^24.1.3",
+        "start-server-and-test": "^2.0.0",
         "vite": "^6.3.5",
         "vite-plugin-istanbul": "^7.0.0",
-        "vitest": "^1.6.1"
+        "vitest": "^3.2.4"
     }
 }
