--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
         "build": "vite build",
         "preview": "vite preview",
         "test": "vitest",
-        "cypress": "cypress open"
+        "test:run": "vitest run",
+        "test:ui": "vitest --ui"
     },
     "dependencies": {
         "@react-google-maps/api": "^2.20.7",
@@ -38,13 +39,13 @@
         "@testing-library/jest-dom": "^6.7.0",
         "@testing-library/react": "^14.3.1",
         "@testing-library/user-event": "^14.6.1",
-        "@vitejs/plugin-react": "^4.3.1",
+        "@types/node": "^24.3.0",
+        "@vitejs/plugin-react": "^4.7.0",
         "cypress": "^13.15.0",
         "dotenv": "^16.5.0",
-        "identity-obj-proxy": "^3.0.0",
         "jsdom": "^24.1.3",
+        "typescript": "^5.9.2",
         "vite": "^6.3.5",
-        "vite-plugin-istanbul": "^7.0.0",
         "vitest": "^1.6.1"
     }
 }
