--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,8 @@
         "dev": "vite",
         "build": "vite build",
         "preview": "vite preview",
-        "test": "vitest",
-        "test:run": "vitest run",
-        "test:ui": "vitest --ui",
-        "cypress": "cypress open",
-        "cy:run": "cypress run",
-        "test:e2e": "start-server-and-test dev http://localhost:5173 cy:run"
+        "test": "jest",
+        "cypress": "cypress open"
     },
     "dependencies": {
         "@react-google-maps/api": "^2.20.7",
@@ -19,8 +15,8 @@
         "axios": "^1.10.0",
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.13.1",
-        "chart.js": "^4.5.0",
         "firebase": "^12.0.0",
+        "chart.js": "^4.5.0",
         "html2canvas": "^1.4.1",
         "jspdf": "^3.0.1",
         "leaflet": "^1.9.4",
@@ -39,18 +35,23 @@
         "use-places-autocomplete": "^4.0.1"
     },
     "devDependencies": {
-        "@testing-library/jest-dom": "^6.7.0",
+        "@babel/core": "^7.26.10",
+        "@babel/preset-env": "^7.26.9",
+        "@babel/preset-react": "^7.26.3",
+        "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^14.3.1",
         "@testing-library/user-event": "^14.6.1",
-        "@types/node": "^24.3.0",
-        "@vitejs/plugin-react": "^4.7.0",
+        "@vitejs/plugin-react": "^4.3.1",
+        "babel-jest": "^29.7.0",
+        "babel-plugin-istanbul": "^7.0.0",
         "cypress": "^13.15.0",
         "dotenv": "^16.5.0",
-        "jsdom": "^24.1.3",
-        "typescript": "^5.9.2",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "jest-junit": "^16.0.0",
+        "mocha-junit-reporter": "^2.2.1",
         "vite": "^6.3.5",
-        "start-server-and-test": "^2.0.0",
-        "vite-plugin-istanbul": "^7.0.0",
-        "vitest": "^3.2.4"
+        "vite-plugin-istanbul": "^7.0.0"
     }
 }
