--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -144,7 +144,7 @@ jobs:
         with:
           name: Vitest Results
           path: frontend/junit.xml
-          reporter: junit
+          reporter: java-junit
       - name: Install xmlstarlet
         run: |
           sudo apt-get update
